[gd_scene load_steps=5 format=2]

[ext_resource path="res://Battle/GameOver/GameOver.gd" type="Script" id=1]
[ext_resource path="res://Textures/Heart/Heart.png" type="Texture" id=2]
[ext_resource path="res://Audio/HeartSplit.ogg" type="AudioStream" id=3]
[ext_resource path="res://Audio/HeartShatter.ogg" type="AudioStream" id=4]

[node name="GameOver" type="Node2D"]
script = ExtResource( 1 )

[node name="Heart" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
rotation = 1.5708
texture = ExtResource( 2 )

[node name="HeartSplit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="HeartShatter" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
